--- a/P1.ipynb
+++ b/P1.ipynb
@@ -74,19 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_and_preprocess_data():\n",
-    "    # Load the datasets with sampling\n",
+    "    # load the datasets with sampling\n",
     "    def load_and_sample(file_path, n_samples=5000):\n",
     "        data = np.load(file_path)\n",
     "        # Randomly sample n_samples\n",
     "        indices = np.random.choice(data.shape[0], n_samples, replace=False)\n",
     "        return data[indices].reshape(-1, 28, 28)  # Reshape directly to 28x28\n",
     "\n",
-    "    # Load the datasets\n",
+    "    # load the datasets\n",
     "    print(\"Loading datasets...\")\n",
     "    circle_data = load_and_sample('Data/circle.npy')\n",
     "    print(f\"Circle data shape: {circle_data.shape}\")\n",
@@ -103,18 +103,17 @@
     "    octagon_data = load_and_sample('Data/octagon.npy')\n",
     "    print(f\"Octagon data shape: {octagon_data.shape}\")\n",
     "\n",
-    "    # Label the datasets\n",
+    "    # label the datasets\n",
     "    circle_labels = np.full(len(circle_data), 0)\n",
     "    square_labels = np.full(len(square_data), 1)\n",
     "    triangle_labels = np.full(len(triangle_data), 2)\n",
     "    hexagon_labels = np.full(len(hexagon_data), 3)\n",
     "    octagon_labels = np.full(len(octagon_data), 4)\n",
     "\n",
-    "    # Define class names\n",
     "    CLASS_NAMES = ['circle', 'square', 'triangle', 'hexagon', 'octagon']\n",
     "    NUM_CLASSES = len(CLASS_NAMES)\n",
     "\n",
-    "    # Combine datasets\n",
+    "    # combine datasets\n",
     "    X = np.concatenate([circle_data, square_data, triangle_data, hexagon_data, octagon_data], axis=0)\n",
     "    y = np.concatenate([circle_labels, square_labels, triangle_labels, hexagon_labels, octagon_labels], axis=0)\n",
     "\n",
@@ -224,15 +223,15 @@
     "    X, y, test_size=0.2, random_state=42, stratify=y\n",
     ")\n",
     "\n",
-    "#Normalize the pixel values\n",
+    "#normalize the pixel values\n",
     "X_train = X_train.astype('float32') / 255.0\n",
     "X_test  = X_test.astype('float32')  / 255.0\n",
     "\n",
-    "#Reshape the data\n",
+    "#reshape the data\n",
     "X_train = X_train.reshape(X_train.shape[0], 28, 28, 1)\n",
     "X_test  = X_test.reshape(X_test.shape[0], 28, 28, 1)\n",
     "\n",
-    "#One-hot encode the labels\n",
+    "#One-hot encoding\n",
     "y_train = tf.keras.utils.to_categorical(y_train, 5)\n",
     "y_test  = tf.keras.utils.to_categorical(y_test,  5)\n",
     "\n",
@@ -507,168 +506,12 @@
     "plt.legend(loc='lower right')\n",
     "plt.show()\n",
     "\n",
-    "# Save model after training\n",
+    "# save model after training\n",
     "model.save('best_model.keras', save_format='keras')\n",
     "\n",
-    "# Print final accuracy\n",
+    "# print final accuracy\n",
     "test_loss, test_acc = model.evaluate(X_test, y_test, verbose=0)\n",
     "print(f\"Final Test Accuracy: {test_acc:.4f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#more complex model lets see how it goes\n",
-    "def create_model():\n",
-    "    data_augmentation = tf.keras.Sequential([\n",
-    "        tf.keras.layers.RandomRotation(0.15),\n",
-    "        tf.keras.layers.RandomZoom(0.15),\n",
-    "        tf.keras.layers.RandomTranslation(0.15, 0.15),\n",
-    "        tf.keras.layers.RandomBrightness(0.1),\n",
-    "        tf.keras.layers.RandomContrast(0.1),\n",
-    "    ])\n",
-    "    \n",
-    "    model = tf.keras.models.Sequential([\n",
-    "        data_augmentation,\n",
-    "        \n",
-    "        # First Convolutional Block with Residual Connection\n",
-    "        tf.keras.layers.Conv2D(32, (3,3), padding='same', activation='relu', input_shape=(28,28,1)),\n",
-    "        tf.keras.layers.BatchNormalization(),\n",
-    "        tf.keras.layers.Conv2D(32, (3,3), padding='same', activation='relu'),\n",
-    "        tf.keras.layers.BatchNormalization(),\n",
-    "        tf.keras.layers.MaxPooling2D((2,2)),\n",
-    "        tf.keras.layers.Dropout(0.2),\n",
-    "        \n",
-    "        # Second Convolutional Block\n",
-    "        tf.keras.layers.Conv2D(64, (3,3), padding='same', activation='relu'),\n",
-    "        tf.keras.layers.BatchNormalization(),\n",
-    "        tf.keras.layers.Conv2D(64, (3,3), padding='same', activation='relu'),\n",
-    "        tf.keras.layers.BatchNormalization(),\n",
-    "        tf.keras.layers.MaxPooling2D((2,2)),\n",
-    "        tf.keras.layers.Dropout(0.3),\n",
-    "        \n",
-    "        # Third Convolutional Block\n",
-    "        tf.keras.layers.Conv2D(128, (3,3), padding='same', activation='relu'),\n",
-    "        tf.keras.layers.BatchNormalization(),\n",
-    "        tf.keras.layers.Conv2D(128, (3,3), padding='same', activation='relu'),\n",
-    "        tf.keras.layers.BatchNormalization(),\n",
-    "        tf.keras.layers.MaxPooling2D((2,2)),\n",
-    "        tf.keras.layers.Dropout(0.4),\n",
-    "        \n",
-    "        # Dense Layers\n",
-    "        tf.keras.layers.Flatten(),\n",
-    "        tf.keras.layers.Dense(256, activation='relu'),\n",
-    "        tf.keras.layers.BatchNormalization(),\n",
-    "        tf.keras.layers.Dropout(0.5),\n",
-    "        tf.keras.layers.Dense(128, activation='relu'),\n",
-    "        tf.keras.layers.BatchNormalization(),\n",
-    "        tf.keras.layers.Dropout(0.5),\n",
-    "        tf.keras.layers.Dense(5, activation='softmax')\n",
-    "    ])\n",
-    "\n",
-    "    # Use a custom learning rate schedule\n",
-    "    initial_learning_rate = 0.001\n",
-    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
-    "        initial_learning_rate,\n",
-    "        decay_steps=1000,\n",
-    "        decay_rate=0.9,\n",
-    "        staircase=True\n",
-    "    )\n",
-    "\n",
-    "    model.compile(\n",
-    "        optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule),\n",
-    "        loss='categorical_crossentropy',\n",
-    "        metrics=['accuracy']\n",
-    "    )\n",
-    "    return model\n",
-    "\n",
-    "def train_model(model, X_train, X_test, y_train, y_test):\n",
-    "    # Define callbacks\n",
-    "    early_stopping = tf.keras.callbacks.EarlyStopping(\n",
-    "        monitor='val_accuracy',\n",
-    "        patience=8,\n",
-    "        restore_best_weights=True,\n",
-    "        min_delta=0.0005\n",
-    "    )\n",
-    "\n",
-    "    reduce_lr = tf.keras.callbacks.ReduceLROnPlateau(\n",
-    "        monitor='val_accuracy',\n",
-    "        factor=0.5,\n",
-    "        patience=4,\n",
-    "        min_lr=0.00001,\n",
-    "        verbose=1\n",
-    "    )\n",
-    "\n",
-    "    model_checkpoint = tf.keras.callbacks.ModelCheckpoint(\n",
-    "        'best_model.keras',\n",
-    "        monitor='val_accuracy',\n",
-    "        save_best_only=True,\n",
-    "        mode='max',\n",
-    "        verbose=1\n",
-    "    )\n",
-    "\n",
-    "    # Train the model\n",
-    "    batch_size = 64  # Increased batch size for faster training\n",
-    "    history = model.fit(\n",
-    "        X_train, y_train,\n",
-    "        epochs=50,  # Increased epochs since we have early stopping\n",
-    "        batch_size=batch_size,\n",
-    "        validation_data=(X_test, y_test),\n",
-    "        callbacks=[early_stopping, reduce_lr, model_checkpoint],\n",
-    "        verbose=1\n",
-    "    )\n",
-    "\n",
-    "    return history\n",
-    "\n",
-    "def evaluate_model(model, X_test, y_test, class_names):\n",
-    "    # Get predictions\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    y_pred_classes = np.argmax(y_pred, axis=1)\n",
-    "    y_test_classes = np.argmax(y_test, axis=1)\n",
-    "\n",
-    "    # Print confusion matrix\n",
-    "    conf_matrix = tf.math.confusion_matrix(y_test_classes, y_pred_classes)\n",
-    "    print(\"\\nConfusion Matrix:\")\n",
-    "    print(conf_matrix.numpy())\n",
-    "\n",
-    "    # Print classification report\n",
-    "    from sklearn.metrics import classification_report\n",
-    "    print(\"\\nClassification Report:\")\n",
-    "    print(classification_report(y_test_classes, y_pred_classes, target_names=class_names))\n",
-    "\n",
-    "    # Test accuracy\n",
-    "    test_loss, test_acc = model.evaluate(X_test, y_test, verbose=0)\n",
-    "    print(f\"\\nFinal Test Accuracy: {test_acc:.4f}\")\n",
-    "\n",
-    "    return test_acc\n",
-    "\n",
-    "def main():\n",
-    "    # Load and preprocess data\n",
-    "    print(\"Loading and preprocessing data...\")\n",
-    "    X, y, CLASS_NAMES = load_and_preprocess_data()\n",
-    "    X_train, X_test, y_train, y_test = prepare_data(X, y)\n",
-    "\n",
-    "    # Create and train model\n",
-    "    print(\"\\nCreating and training model...\")\n",
-    "    model = create_model()\n",
-    "    history = train_model(model, X_train, X_test, y_train, y_test)\n",
-    "\n",
-    "    # Plot training history\n",
-    "    plot_training_history(history)\n",
-    "\n",
-    "    # Evaluate model\n",
-    "    print(\"\\nEvaluating model...\")\n",
-    "    evaluate_model(model, X_test, y_test, CLASS_NAMES)\n",
-    "\n",
-    "    # Load best model and evaluate\n",
-    "    best_model = tf.keras.models.load_model('best_model.keras')\n",
-    "    print(\"\\nEvaluating best model...\")\n",
-    "    best_acc = evaluate_model(best_model, X_test, y_test, CLASS_NAMES)\n",
-    "\n",
-    "    print(f\"\\nBest model saved with accuracy: {best_acc:.4f}\")"
    ]
   },
   {
@@ -725,46 +568,11 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "# Plot a random sample of 10 test images, their predicted labels and ground truth\n",
     "#['circle', 'square', 'triangle', 'hexagon', 'octagon'])\n",
     "index = 1201\n",
     "plt.imshow(X_train[index].squeeze(), cmap='gray')\n",
     "plt.title(f\"Label = {y_train[index]}\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 57ms/step\n",
-      "Predicted: [4 3 0 0 3 4 0 1 2 1]\n",
-      "True labels: [[0. 0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0. 0.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Example quick check\n",
-    "import numpy as np\n",
-    "\n",
-    "preds = model.predict(X_test[:10])\n",
-    "pred_classes = np.argmax(preds, axis=1)\n",
-    "print(\"Predicted:\", pred_classes)\n",
-    "print(\"True labels:\", y_test[:10])"
    ]
   }
  ],
